fix: add flex-wrap to gallery images section

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ p.gap {
 .container {
     background-color: #9abfcc;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 52px;
 }
